- In opus.js (line 427-431), update adjustHelpPanelHeight function, in   the logic of help panel height calculation, remove the constant and   replace it with elements' height calculation. This will be a proper way   to get the help panel height. - In opus.css (line 1548-1554), add css styling so that in help menu, "x"   icon stays at the right of header. This will prevent "x" from getting   squeezed to the body area and creating a white gap next to ps.

--- a/opus/application/static_media/css/opus.css
+++ b/opus/application/static_media/css/opus.css
@@ -1545,6 +1545,14 @@ footer {
     position: relative;
 }
 
+/* In help menu, make "x" icon stays at the right of header. This will
+prevent "x" from getting squeezed to the body area and creating a white
+gap next to ps */
+#op-help-panel .card-header {
+    display: flex;
+    justify-content: space-around;
+}
+
 .op-overlay {
     display: none;
     position: fixed;
